--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
-// {
-//   "extends": "next/core-web-vitals"
-// }
 {
-  "parser": "@babel/eslint-parser",
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "react/no-unescaped-entities": [ ]
-  }
+  "extends": "next/core-web-vitals"
 }
